--- a/ros2_sinewave/package.xml
+++ b/ros2_sinewave/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
+  <depend>generate_parameter_library</depend>
 
 
   <test_depend>ament_copyright</test_depend>
