--- a/ros2_sinewave/param/sinewave_parameters.yaml
+++ b/ros2_sinewave/param/sinewave_parameters.yaml
@@ -2,11 +2,11 @@ sinewave_parameters:
   publisher_frequency:
     type: double
     default_value: 10.0
-    description: "The frequency of the sine wave publisher in Hz."
+    description: "The frequency of the sine wave publisher."
   
   amplitude:
     type: double
-    default_value: 1.0
+    default_value: 5.0
     description: "The amplitude of the sine wave."
 
   angular_frequency:
