--- a/ros2_sinewave/package.xml
+++ b/ros2_sinewave/package.xml
@@ -11,6 +11,8 @@
   <depend>std_msgs</depend>
   <depend>generate_parameter_library</depend>
 
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
