--- a/ros2_sinewave/package.xml
+++ b/ros2_sinewave/package.xml
@@ -10,6 +10,7 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
   <depend>generate_parameter_library</depend>
+  <depend>ros2_sinewave_interfaces</depend>
 
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
